--- a/index.html
+++ b/index.html
@@ -11,20 +11,19 @@
 
 </head>
 
-<body>
-
-    <header>
-        <nav>
-            <img src="img/lambda-black.png" alt="Nav Image"/>
-            <a href="index.html">Home</a>
-            <a href="about.html">About</a>
-            <a href="products.html">Products</a>
-            <a href="blog.html">Blog</a>
-            <a href="contact.html">Contact</a>
-        </nav>
-    </header>
-
+<body>    
     <div class="container">
+        <header>
+            <nav>
+                <img src="img/lambda-black.png" alt="Nav Image"/>
+                <a href="index.html">Home</a>
+                <a href="about.html">About</a>
+                <a href="products.html">Products</a>
+                <a href="blog.html">Blog</a>
+                <a href="contact.html">Contact</a>
+            </nav>
+        </header>
+        <img src="img/jumbo.jpg" alt="long exposure photograph of cars on a curve">
         <section class="top-content">
             <div class="text-container">
                 <h2>The Future</h2>
