--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,16 @@
                 </nav>
             </header>
             <img src="img/jumbo.jpg" alt="long exposure photograph of cars on a curve">
-            
+            <h1>Contact Us!</h1>
+            <section class="address">
+                <p>
+                    You can visit us in person at:
+                    <address>
+                            8072 Indian Spring Court <br>
+                            Harvey, IL 60426
+                    </address>
+                </p>
+            </section>
     </div>
 </body>
 </html>
